<resources>
    <string name="app_name">Movie</string>
    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay updated with the latest movies</string>

    <string name="latest">Latest Movie</string>
    <string name="the_most_recent_movie_created">The most recent movie created</string>
    <string name="now_playing">Now Playing</string>
    <string name="movies_in_your_theaters">Movie in your theaters</string>

    <string name="refresh">(Click on picture to refresh)</string>

    <string name="recommendations">Recommendations</string>
    <string name="based_on_this_movie">Based on this movie</string>
</resources>